--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
@@ -11,3 +14,8 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+<script src="https://telegram.org/js/telegram-web-app.js">
+      window.Telegram.WebApp.ready()
+      window.Telegram.WebApp.expand()
+      window.Telegram.WebApp.disableVerticalSwipes()
+</script>
